<resources>
    <string name="app_ver">v 1.1.5</string>
    <string name="app_ver2">2.0.0</string>
    <string name="app_name">MAST</string>
    <string name="action_settings">Settings</string>
    <string name="appname">Mobile Application to Secure Tenure</string>
    <string name="capturedata">Capture Data</string>
    <string name="reviewdata">Review Data</string>
    <string name="logout">Logout</string>
    <string name="downloaddata">Download Data</string>
    <string name="syncdata">Synchronize Data</string>
    <string name="userpref">User Preferences</string>
    <string name="verifydata">Verify Data</string>
    <string name="btn_ok">OK</string>
    <string name="change_language">Change Language</string>
    <string name="capture_new_data">Capture Data</string>
    <string name="configure_data">Configure Data Collection Tools</string>
    <string name="auto_sync">Configure Auto Sync</string>
    <string-array name="UserPref_arrays">
        <item>Change Language</item>
        <item>Configure Data Collection Tools</item>
        <item>Configure Auto Sync </item>
        <item>Configure Map Display</item>
    </string-array>
    <string-array name="Language_arrays">
        <item>English</item>
        <item>Swahili</item>
    </string-array>
    <string-array name="add_options_arrays">
        <item>Capture Point</item>
        <item>Capture Line</item>
        <item>Capture Polygon</item>
    </string-array>
    <string-array name="Sync_arrays">
        <item>Auto Sync</item>
    </string-array>
    <string-array name="add_point_options_arrays">
        <item>00_Draw Point</item>
        <item>01_Capture point by GPS</item>
        <item>02_Enter location</item>
    </string-array>
    <string-array name="add_line_options_arrays">
        <item>10_Draw Line</item>
        <item>11_Capture line by GPS</item>
        
    </string-array>
    <string-array name="add_poly_options_arrays">
        <item>20_Draw Polygon</item>
        <item>21_Capture polygon by GPS</item>
    </string-array>
    <string name="option_00">Draw Point</string>
    <string name="option_01">Capture point by GPS</string>
    <string name="option_02">Enter location</string>
    <string name="option_10">Draw Line</string>
    <string name="option_11">Capture line by GPS</string>
    <string name="option_12">Create Line based on bearing and distance</string>
    <string name="option_20">Draw Polygon</string>
    <string name="option_21">Capture polygon by GPS</string>
    <string-array name="measure_options_arrays">
        <item>Calculate Distance</item>
        <item>Calculate Area</item>
        <item>Measure Polygon Area</item>
        <item>Measure Line Length</item>
    </string-array>
    <string name="title_activity_capture_attributes">Capture Attributes</string>
    <string name="projectname">Project Name</string>
    <string name="attribButtons">Attrib Buttons</string>
    <string name="mapOptions">Map Options</string>
    <string name="attribCount">0</string>
    <string name="emptyListText">No items to show</string>
    <string name="edit_spatial">Edit spatial</string>
    <string name="edit_attributes">Edit attributes</string>
    <string name="delete_entry">Delete entry</string>
    <string name="mark_as_complete">Mark as complete</string>
    <string name="title_activity_login">MAST</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="layer_manager">Layer Manager</string>
    <string name="mapviewer">Map Viewer</string>
    <string name="review_data">Review Data</string>
    <string name="menu_gps">GPS</string>
    <string name="menu_xy">Get location co-ordinates</string>
    <string name="menu_measure">Measure</string>
    <string name="menu_map_info">Map Info</string>
    <string name="title_person">Person List</string>
    <string name="save">Save</string>
    <string name="person_photo">Photo</string>
    <string name="cancel">Cancel</string>
    <string name="firstName">First Name</string>
    <string name="middleName">Middle Name</string>
    <string name="lastName">Last Name</string>
    <string name="Gender">Gender</string>
    <string name="mobile">Mobile No.</string>
    <string name="identity">Identity</string>
    <string name="Occupation">Occupation</string>
    <string name="maritalStatus">Marital Status</string>
    <string name="personShare">Person Share</string>
    <string name="spatialUnitId">Spatial Unit Id</string>
    <string-array name="genderArray">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="spatialUnitValue">XXXXX</string>
    <string name="title_activity_add_media">Add New Multimedia</string>
    <string name="addMore">Add More</string>
    <string name="PropertyInfo">Property Info</string>
    <string name="TenureInfo">Tenure Info</string>
    <string name="multimedia">Multimedia</string>
    <string name="Tittle_Generalinformation">General information</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_media_list">Multimedia List</string>
    <string name="addNew">Add New</string>
    <string name="attributes">Attributes</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="AddNewMultimedia">Add New Multimedia</string>
    <string name="AddNewPerson">Add New Person</string>
    <string name="AddNewProperty">Add Property Info</string>
    <string name="AddSocialTenureInfo">Add Social Tenure</string>
    <string name="SocialTenureInfo">Social Tenure Information</string>
    <string name="Latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="clear_feature">Clear</string>
    <string name="save_feature">Save</string>
    <string name="xcordinate">X-Coordinate :</string>
    <string name="ycoordinate">Y-Coordinate :</string>
    <string name="xydialogTitle_mapViewer">Co-ordinates from Map</string>
    <string name="xydialogTitle_captureData">Co-ordinates from Map</string>
    <string name="measureDialogTitle">Select feature to measure</string>
    <string name="deleteFeatureEntryMsg">Are you sure you want to delete this feature ?</string>
    <string name="btn_cancel">Cancel</string>
    <string name="completedFeatureMsg">Are you sure to mark this feature as Completed ?</string>
    <string-array name="reviewDataStatus">
        <item>Draft</item>
        <item>Completed</item>
        <item>Synced</item>
        <item>Rejected</item>
    </string-array>
    <string name="title_activity_capture_spatial_data">Capture Data</string>
    <string name="plot_by_gps">Plot point by gps</string>
    <string name="spatialunit_lbl">Spatial unit Id</string>
    <string name="undo">Undo</string>
    <string name="zoom_curent_location">Zoom to current location</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="show_bookmarks">View Bookmarks</string>
    <string name="bookmarkDialogTitle">Select Bookmark</string>
    <string name="clearFeatureDrawnMsg">Do you want to clear this feature ?</string>
    <string name="unableSaveFeatureMsg">Unable to save Feature..!!</string>
    <string name="updateFeatureMsg">Feature Updated Successfully..!!</string>
    <string name="unableUpdatefeatureMsg">Unable to update feature..!!</string>
    <string name="errorOccured">An error occurred..!!</string>
    <string name="successFeatureSave">Feature Saved Successfully..!!</string>
    <string name="noFeaturesToLoad">No features to load from db..!!</string>
    <string name="featureEditTipMsg">Long Press on the Markers to activate edit mode and drag to change</string>
    <string name="noLocationFound">No location found..!!</string>
    <string name="correctValuesWarning">Please enter correct values</string>
    <string name="areaTxt">Area</string>
    <string name="lengthTxt">Length</string>
    <string name="noFeatureFoundMsg">No feature found..!!</string>
    <string name="errorDeleteFeatureMsg">Error deleting feature..!!</string>
    <string name="unableToLoadOfflineData">Unable to load offline data..!!</string>
    <string name="colorDialogTitle">Choose Color</string>
    <string-array name="mapDisplayColors">
        <item>Yellow</item>
        <item>Red</item>
        <item>Green</item>
        <item>White</item>
        <item>Cyan</item>
        <item>Blue</item>
    </string-array>
    <string name="title_activity_configure_map_display">Configure Map Display</string>
    <string-array name="configureMapToolsitems">
        <item>Point</item>
        <item>Line</item>
        <item>Polygon</item>
    </string-array>
    <string-array name="media">
        <item>Image</item>
        <item>Video</item>
    </string-array>
    <string name="title_activity_add_image">AddImageActivity</string>
    <string name="captureImage">capture Image</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="view_media">View media</string>
    <string name="feature_not_allowed_msg">You are not allowed to access this feature.</string>
    <string name="add_photo">Add Photo</string>
    <string name="gps_fix_wait_msg">Waiting for GPS location</string>
    <string name="gps_fix_search_msg">Searching for location through GPS</string>
    <string name="gps_fix_success_msg">Location set by GPS</string>
    <string name="bookmark_saved_msg">Bookmark saved..!!</string>
    <string name="bookmark_save_error">Unable to save bookmark</string>
    <string name="bookmark_enter_name">Please enter bookmark name..!!</string>
    <string-array name="personTypeArray">
        <item>Select an Option</item>
        <item>Natural</item>
        <item>Non-Natural</item>
    </string-array>
    <string-array name="residentArray">
       <item>Select an Option</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="spatialunit_personType_lbl">Select Person Type</string>
    <string name="title_activity_add_non_natural_person">Non-Natural Person</string>
    <string name="title_activity_custom_attrib">Custom Attributes</string>
    <string name="AddPerson">Add Person</string>
    <string name="select_person_lbl">Select Person</string>
    <string name="gps_disabled_title">GPS Disabled</string>
    <string name="gps_disabled_Msg">GPS is Disabled.Go to the settings to Enable GPS</string>
    <string name="setting_btn">Settings</string>
    <string name="internet_disabled_title">Internet Disabled</string>
    <string name="view_map">View Map</string>
    <string name="view_attributes">View Attributes</string>
    <string name="mark_as_verified">Mark as verified</string>
    <string name="select_tenure_lbl">Apply Social Tenure</string>
    <string name="radio_single">Single</string>
    <string name="radio_multiple">Multiple</string>
    <string name="data_summary_label1">Tenure Relation :</string>
    <string name="data_summary_label1_1">Tenure Type :</string>
    <string name="data_summary_label1_owner">Owner :</string>
    <string name="data_summary_label2">Property :</string>
    <string name="data_summary_label3">Natural person(s) :</string>
    <string name="data_summary_label4">Non-Natural person :</string>
    <string name="data_summary_label4_admin">Administrator :</string>
    <string name="data_summary_label5">Social tenure :</string>
    <string name="data_summary_label5_Guardian">Guardian :</string>
    <string name="data_summary_label5_POI">Person of Interest :</string>
    <string name="data_summary_label6">Multimedia :</string>
    <string name="data_summary_label7">Custom :</string>
</resources>