<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ex.pn.cloudburst.TestActivity" >

    <item
        android:id="@+id/edit_spatial"
        android:orderInCategory="100"
        android:title="@string/edit_spatial"
        app:showAsAction="never"/>
     <item
        android:id="@+id/edit_attributes"
        android:orderInCategory="100"
        android:title="@string/edit_attributes"
        app:showAsAction="never"/>
      <item
        android:id="@+id/delete_entry"
        android:orderInCategory="100"
        android:title="@string/delete_entry"
        app:showAsAction="never"/>
       <item
        android:id="@+id/mark_as_complete"
        android:orderInCategory="100"
        android:title="@string/mark_as_complete"
        app:showAsAction="never"/>

</menu>
