<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:id="@+id/list_container"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="vertical" >

        <TextView
             android:id="@+id/select_tenure_lbl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:text="@string/select_tenure_lbl"
             android:textColor="@color/black"
             android:textSize="@dimen/textSize" />

        <RadioGroup
            android:id="@+id/radio_selectTenure"
           android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp" >

           <RadioButton
                android:id="@+id/radio_multiple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_multiple"
                  android:checked="true"/>
            
            <RadioButton
                android:id="@+id/radio_single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_single" />

            

        </RadioGroup>

          <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC" />
        
        <TextView
             android:id="@+id/select_person_lbl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:text="@string/select_person_lbl"
             android:textColor="@color/black"
             android:textSize="@dimen/textSize" />
        
        <Spinner
            android:id="@+id/spinner_person_type"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp" />
          <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC" />
        
        <ListView
            android:id="@+id/list_view"
            style="@style/ListStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp" >

        </ListView>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/color_primary"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/mapOptions"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/save"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/mapOptions"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>