<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="20dip"
                android:text="@string/data_summary_label1"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/TextView_tenureRelation"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="20dip"
                android:text="@string/data_summary_label2"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/TextView_propertyStatus"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:textColor="#009112"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="20dip"
                android:text="@string/data_summary_label3"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/TextView_countNaturalPerson"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:textStyle="bold" />
        </TableRow>

       <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView07"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="20dip"
                android:text="@string/data_summary_label4"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/TextView_nonNatural"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:textStyle="bold" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView09"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="20dip"
                android:text="@string/data_summary_label5"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/TextView_countSocialTenure"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:textStyle="bold" />
        </TableRow>
        
         <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView11"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="20dip"
                android:text="@string/data_summary_label6"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/TextView_countMultimedia"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:textStyle="bold" />
        </TableRow>
        
          <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView13"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="20dip"
                android:text="@string/data_summary_label7"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/TextView_custom"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/color_primary"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/edit_attributes"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:contentDescription="@string/mapOptions"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/edit_attributes"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>